--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
           version: v0.2.0
 
       - name: Compile WASM
-        run: cargo build --release --target wasm32-unknown-unknown
+        run: cargo build --release --target wasm32-unknown-unknown && substreams pack
 
       - name: Release
         uses: softprops/action-gh-release@v1
