--- a/substreams.yaml
+++ b/substreams.yaml
@@ -28,6 +28,14 @@ modules:
     output:
       type: proto:soulbound_modules.v1.Foo
 
+  - name: map_key_value
+    kind: map
+    inputs:
+      - params: string
+      - source: sf.ethereum.type.v2.Block
+    output:
+      type: proto:soulbound_modules.v1.DynamicKeyValue
+
   # Example Map
   # name: db_out
   #   kind: map
@@ -38,6 +46,7 @@ modules:
   #       mode: deltas
   #   output:
   #     type: proto:sf.substreams.sink.database.v1.DatabaseChanges
+
   # Example store
   # name: store_block_meta_start
   #   kind: store
