--- a/substreams.yaml
+++ b/substreams.yaml
@@ -44,6 +44,14 @@ modules:
     output:
       type: proto:soulbound_modules.v1.Hotdog
 
+  - name: map_event
+    kind: map
+    inputs:
+      - params: string
+      - source: sf.ethereum.type.v2.Block
+    output:
+      type: proto:soulbound_modules.v1.Hotdogs
+
   # Example Map
   # name: db_out
   #   kind: map
