--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ substreams-database-change = "1.0.0"
 substreams-entity-change = "1.1"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
 sha3 = "0.10.8"
+regex = "1.8.4"
+fancy-regex = "0.11.0"
 
 [profile.release]
 lto = true
