--- a/substreams.yaml
+++ b/substreams.yaml
@@ -21,8 +21,8 @@ binaries:
 params:
   map_events: MAP_EVENTS_PARAMS
   filter_events: FILTER_EVENTS_PARAMS
-  filter_blur_trades: "0x5Af0D9827E0c53E4799BB226655A1de152A425a5&&0x5Af0D9827E0c53E4799BB226655A1de152A425a5"
-  #filter_blur_trades: FILTER_BLUR_TRADES_PARAMS
+  filter_blur_trades: FILTER_BLUR_TRADES_PARAMS
+  #filter_blur_trades: "0x5Af0D9827E0c53E4799BB226655A1de152A425a5&&0x5Af0D9827E0c53E4799BB226655A1de152A425a5"
 
 modules:
 
