--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,13 @@ fancy-regex = "0.11.0"
 ethereum_abi = "0.4.0"
 serde_json = "1.0.97"
 primitive-types = "^0.11"
+ipfsapi = "0.4.0"
+reqwest = "0.11.18"
+ehttp = "0.3.0"
+async-ffi = { version = "0.4.1", features = ["macros"] }
+async-std = "1.12.0"
+wasm-bindgen = "0.2.87"
+base58 = "0.2.0"
 
 [profile.release]
 lto = true
