--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ chrono = { version = "0.4", features = [ "std" ], default-features = false }
 sha3 = "0.10.8"
 regex = "1.8.4"
 fancy-regex = "0.11.0"
-ethereum_abi = "0.4.0"
+ethereum_abi = { git = "https://github.com/MercuricChloride/rust-ethereum-abi.git", branch = "main"}
 serde_json = "1.0.97"
-primitive-types = "^0.11"
+primitive-types = "^0.12"
 
 [profile.release]
 lto = true
